Fix analysis warnings